--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "http://garrettgalow.com/"
 languageCode = "en-us"
 title = "Garrett Galow"
 theme = "ananke"
