--- a/config.toml
+++ b/config.toml
@@ -2,3 +2,27 @@ baseURL = "http://garrettgalow.com/"
 languageCode = "en-us"
 title = "Garrett Galow"
 theme = "hugo-goa"
+
+author = "Garrett Galow"
+
+
+## Site Settings
+[params]
+author = "Garrett Galow"
+intro = "Making the Cloud easier for everyone"
+description = "Product @ Cloudflare. Previously Product @ Microsoft Azure"
+# TODO: authorimage = ""
+
+[params.meta]
+description = "Homepage for Garrett Galow"
+keywords = "garrett,galow,cloud,product,cloudflare"
+
+[params.social]
+github = "garrettgalow"
+twitter = "g2theg"
+linkedin = "garrett-galow"
+instagram = "garrettgalow"
+email = "garrett.galow@gmail.com"
+
+[params.extra]
+poweredby = true
