--- a/config.toml
+++ b/config.toml
@@ -12,6 +12,7 @@ author = "Garrett Galow"
 intro = "Making the Cloud easier for everyone"
 description = "Product @ Cloudflare. Previously Product @ Microsoft Azure"
 # TODO: authorimage = ""
+dateformat = "Mon, Jan 2, 2006"
 
 [params.meta]
 description = "Homepage for Garrett Galow"
@@ -24,5 +25,13 @@ linkedin = "garrett-galow"
 instagram = "garrettgalow"
 email = "garrett.galow@gmail.com"
 
-[params.extra]
-poweredby = true
+#[params.extra]
+#highlightjs = false
+#poweredby = true
+
+## Main Menu
+[[menu.main]]
+   name = "about"
+   weight = 100
+   identifier = "about"
+   url = "/about/"
