--- a/hugo.toml
+++ b/hugo.toml
@@ -9,7 +9,7 @@ author = "Garrett Galow"
 ## Site Settings
 [params]
 author = "Garrett Galow"
-intro = "Making the Cloud faster and more secure"
+intro = "Building the Cloud one fluffy byte at a time"
 description = "Product @ Cloudflare. Previously Product @ Microsoft Azure"
 # TODO: authorimage = ""
 dateformat = "Mon, Jan 2, 2006"
